--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -208,6 +208,7 @@
     margin: 60px auto 30px;
     padding: 15px;
     position: relative;
+    top: 60px;
 
     /* Styles */
     background: #fffaf6;
