--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -11,10 +11,10 @@
 							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Product Configuration</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Master Entry</img></a>
+							<a href="../../ims/pages/product.jsp"><img src="../../ims/images/arrow.png" height="20px">Master Entry</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Purchase Entry</img></a>
+							<a href="../../ims/pages/enterStock.jsp"><img src="../../ims/images/arrow.png" height="20px">Purchase Entry</img></a>
 						</li>
 						<li>
 							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Purchase Edit</img></a>
@@ -40,7 +40,7 @@
                     <li><a href="#">Report</a>
 					<ul>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Stock View</img></a>
+							<a href="../../ims/ViewStock"><img src="../../ims/images/arrow.png" height="20px">Stock View</img></a>
 						</li>
 						<li>
 							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Purchase View</img></a>
