--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -43,7 +43,7 @@
 							<a href="../../ims/ViewStock"><img src="../../ims/images/arrow.png" height="20px">Stock View</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Purchase View</img></a>
+							<a href="../../ims/ViewPurchase"><img src="../../ims/images/arrow.png" height="20px">Purchase View</img></a>
 						</li>
 						<li>
 							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Sales View</img></a>
