--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -14,7 +14,7 @@
 							<a href="../../ims/pages/product.jsp"><img src="../../ims/images/arrow.png" height="20px">Master Entry</img></a>
 						</li>
 						<li>
-							<a href="../../ims/pages/enterStock.jsp"><img src="../../ims/images/arrow.png" height="20px">Purchase Entry</img></a>
+							<a href="saveStock"><img src="../../ims/images/arrow.png" height="20px">Purchase Entry</img></a>
 						</li>
 						<li>
 							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Purchase Edit</img></a>
