--- a/WebContent/css/include-style.css
+++ b/WebContent/css/include-style.css
@@ -15,7 +15,7 @@ body {
 }
 *
 {
-  margin: 0 auto 0 auto;
+  margin: 0 ;
  text-align:left;}
 
 #container
@@ -23,14 +23,14 @@ body {
   display: block; 
   height:auto;
   position: relative; 
-  width: 960px;
+  width: 100%;
 }
 
 
 #header
 {
 height:85px;
-width:960px;	
+width:100%;	
 }
 
 #header h1
@@ -76,7 +76,7 @@ color:#67A0F5;
 display:block;
 float:left;
 clear:both;
-width:960px;
+width:100%;
 height:54px;
 float:left;
 clear:both;
@@ -167,7 +167,7 @@ color:#87BCF8;
 {
 display:block;
 float:left;
-width:689px;
+width:75%;
 height:auto;
 padding-left:10px;
 padding-top:15px;
@@ -178,26 +178,27 @@ padding-bottom:5px;
 
 #content_top
 {
-	background-image:url(../../ims/images/main_top.png);
-	background-repeat:no-repeat;
-	width:689px;
+	/* background-image:url(../../ims/images/main_top.png);
+	background-repeat:no-repeat; */
+	
+	width:100%;
 	height:25px;
 }
 
 #content_main
 {
-background-image:url(../../ims/images/main_back.png);
-background-repeat:repeat-y;
-width:659px;
+/* background-image:url(../../ims/images/main_back.png);
+background-repeat:repeat-y; */
+width:100%;
 padding-left:15px;
 padding-right:15px;
 }
 
 #content_bottom
 {
-background-image:url(../../ims/images/main_bottom.png);
-background-repeat:no-repeat;
-width:689px;
+/* background-image:url(../../ims/images/main_bottom.png);
+background-repeat:no-repeat; */
+width:100%;
 height:25px;
 }
 
@@ -229,7 +230,7 @@ color:#7198E1;
 	list-style: none;
 	padding: 0px;
 	margin-left:auto;
-	width:960px;
+	width:100%;
 }
 
 #menu li {
