--- a/WebContent/css/include-style.css
+++ b/WebContent/css/include-style.css
@@ -189,6 +189,7 @@ padding-bottom:5px;
 {
 /* background-image:url(../../ims/images/main_back.png);
 background-repeat:repeat-y; */
+background-color: white;
 width:100%;
 padding-left:15px;
 padding-right:15px;
