--- a/WebContent/css/include-style.css
+++ b/WebContent/css/include-style.css
@@ -187,8 +187,8 @@ padding-bottom:5px;
 
 #content_main
 {
-/* background-image:url(../../ims/images/main_back.png);
-background-repeat:repeat-y; */
+ border-radius: 5px;
+ border: 2px solid #000040;
 background-color: white;
 width:100%;
 padding-left:15px;
@@ -272,3 +272,25 @@ html, body {
 text-align: center;
 }
 p {text-align: left;}
+
+.inpu-div{
+	float: left;
+	width: 45%;
+	padding-top: 10px;
+}
+
+.label{
+	font-size: 15px;
+	font-weight: bold;
+	width: 40%;
+	padding-right: 6px;
+}
+.input-text{
+	width: 55%;
+}
+.rcorners {
+    border-radius: 5px;
+    border: 2px solid #666666;
+    padding: 5px;
+    width: 90%;
+}
