--- a/WebContent/css/include-style.css
+++ b/WebContent/css/include-style.css
@@ -6,13 +6,23 @@ body {
 	margin: 0;
 	padding: 0;
 	text-align: left;
-	font: 12px Arial, Helvetica, sans-serif;
+	font-family: Verdana,Geneva,sans-serif;
 	font-size: 13px;
-	color: #061C37;
-	background: #EEEFE4;
-	background-image:url(../../ims/images/background.png);
-	background-repeat:repeat-x;
+	background-image: -webkit-gradient(
+	linear,
+	left top,
+	left bottom,
+	color-stop(0, #8CC3FA),
+	color-stop(1, #FDFCFF)
+);
+background-image: -o-linear-gradient(bottom, #8CC3FA 0%, #FDFCFF 100%);
+background-image: -moz-linear-gradient(bottom, #8CC3FA 0%, #FDFCFF 100%);
+background-image: -webkit-linear-gradient(bottom, #8CC3FA 0%, #FDFCFF 100%);
+background-image: -ms-linear-gradient(bottom, #8CC3FA 0%, #FDFCFF 100%);
+background-image: linear-gradient(to bottom, #8CC3FA 0%, #FDFCFF 100%);
+
 }
+
 *
 {
   margin: 0 ;
@@ -149,7 +159,7 @@ background-repeat:repeat-x;
 margin-top:5px;
 color:#FFFFFF;
 text-decoration:none;
-font-size:15px;
+font-size:12px;
 font-weight:bold;
 }
 
@@ -293,4 +303,25 @@ p {text-align: left;}
     border: 2px solid #666666;
     padding: 5px;
     width: 90%;
+}
+
+.btn-style{
+	border : solid 1px #e6e6e6;
+	border-radius : 3px;
+	moz-border-radius : 3px;
+	-webkit-box-shadow : 0px 0px 2px rgba(0,0,0,1.0);
+	-moz-box-shadow : 0px 0px 2px rgba(0,0,0,1.0);
+	box-shadow : 0px 0px 2px rgba(0,0,0,1.0);
+	font-size : 20px;
+	color : #696869;
+	padding : 1px 17px;
+	background : #ffffff;
+	background : -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(49%,#f1f1f1), color-stop(51%,#e1e1e1), color-stop(100%,#f6f6f6));
+	background : -moz-linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
+	background : -webkit-linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
+	background : -o-linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
+	background : -ms-linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
+	background : linear-gradient(top, #ffffff 0%, #f1f1f1 49%, #e1e1e1 51%, #f6f6f6 100%);
+	filter : progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0 );
+
 }
