--- a/WebContent/css/include-style.css
+++ b/WebContent/css/include-style.css
@@ -199,7 +199,7 @@ padding-bottom:5px;
 {
  border-radius: 5px;
  border: 2px solid #000040;
-background-color: white;
+/* background-color: white; */
 width:100%;
 padding-left:15px;
 padding-right:15px;
