--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -3,7 +3,7 @@
                 <h3>Links</h3>
                         
                 <ul>
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="login">Dashboard</a></li>
                     <li><a href="#">User Profile</a></li>
                     <li><a href="#">Product</a>
 					<ul>
@@ -55,7 +55,6 @@
 							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Sales by a user</img></a>
 						</li>
 					</ul>
-					</li>
-                    
+					</li>                    
                 </ul>
 </div>
