--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -8,7 +8,7 @@
                     <li><a href="#">Product</a>
 					<ul>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Product Configuration</img></a>
+							<a href="SaveStockAlart"><img src="../../ims/images/arrow.png" height="20px">Product Configuration</img></a>
 						</li>
 						<li>
 							<a href="saveProduct"><img src="../../ims/images/arrow.png" height="20px">Master Entry</img></a>
