--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -8,51 +8,51 @@
                     <li><a href="#">Product</a>
 					<ul>
 						<li>
-							<a href="SaveStockAlart"><img src="../../ims/images/arrow.png" height="20px">Product Configuration</img></a>
+							<a href="SaveStockAlart"><img src="images/arrow.png" height="20px">Product Configuration</img></a>
 						</li>
 						<li>
-							<a href="saveProduct"><img src="../../ims/images/arrow.png" height="20px">Master Entry</img></a>
+							<a href="saveProduct"><img src="images/arrow.png" height="20px">Master Entry</img></a>
 						</li>
 						<li>
-							<a href="saveStock"><img src="../../ims/images/arrow.png" height="20px">Purchase Entry</img></a>
+							<a href="saveStock"><img src="images/arrow.png" height="20px">Purchase Entry</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Purchase Edit</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px">Purchase Edit</img></a>
 						</li>
 					</ul>
 					</li>
                     <li><a href="#">Sales</a>
 					<ul>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Customer Entry</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px">Customer Entry</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Sales</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px">Sales</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Edit Sales</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px">Edit Sales</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Pending Payment</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px">Pending Payment</img></a>
 						</li>
 					</ul>
 					</li>
                     <li><a href="#">Report</a>
 					<ul>
 						<li>
-							<a href="../../ims/ViewStock"><img src="../../ims/images/arrow.png" height="20px">Stock View</img></a>
+							<a href="ViewStock"><img src="images/arrow.png" height="20px">Stock View</img></a>
 						</li>
 						<li>
-							<a href="../../ims/ViewPurchase"><img src="../../ims/images/arrow.png" height="20px">Purchase View</img></a>
+							<a href="ViewPurchase"><img src="images/arrow.png" height="20px">Purchase View</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Sales View</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px">Sales View</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Profit and Loss</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px">Profit and Loss</img></a>
 						</li>
 						<li>
-							<a href="#"><img src="../../ims/images/arrow.png" height="20px">Sales by a user</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px">Sales by a user</img></a>
 						</li>
 					</ul>
 					</li>                    
