--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -1,58 +1,58 @@
 <div id="leftmenu_main">    
                 
-                <h3>Links</h3>
+                <h3>Menu</h3>
                         
                 <ul>
-                    <li><a href="login">Dashboard</a></li>
-                    <li><a href="#">User Profile</a></li>
-                    <li><a href="#">Product</a>
+                    <li><a href="login"><%=Messages.getString("company_dashboard") %></a></li>
+                    <li><a href="#"><%=Messages.getString("company_user_Profile") %></a></li>
+                    <li><a href="#"><%=Messages.getString("company_product") %></a>
 					<ul>
 						<li>
-							<a href="SaveStockAlart"><img src="images/arrow.png" height="20px">Product Configuration</img></a>
+							<a href="SaveStockAlart"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_item_configuration") %></img></a>
 						</li>
 						<li>
-							<a href="saveProduct"><img src="images/arrow.png" height="20px">Master Entry</img></a>
+							<a href="saveProduct"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_master_entry") %></img></a>
 						</li>
 						<li>
-							<a href="saveStock"><img src="images/arrow.png" height="20px">Purchase Entry</img></a>
+							<a href="saveStock"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_purchase_entry") %></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px">Purchase Edit</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_purchase_edit") %></img></a>
 						</li>
 					</ul>
 					</li>
-                    <li><a href="#">Sales</a>
+                    <li><a href="#"><%=Messages.getString("company_sales") %></a>
 					<ul>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px">Customer Entry</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_customer_entry") %></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px">Sales</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_product_sales") %></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px">Edit Sales</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_edit_sales") %></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px">Pending Payment</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_pending_payment") %></img></a>
 						</li>
 					</ul>
 					</li>
-                    <li><a href="#">Report</a>
+                    <li><a href="#"><%=Messages.getString("company_report") %></a>
 					<ul>
 						<li>
-							<a href="ViewStock"><img src="images/arrow.png" height="20px">Stock View</img></a>
+							<a href="ViewStock"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_stock_view") %></img></a>
 						</li>
 						<li>
-							<a href="ViewPurchase"><img src="images/arrow.png" height="20px">Purchase View</img></a>
+							<a href="ViewPurchase"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_purchase_view") %></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px">Sales View</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_sales_view") %></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px">Profit and Loss</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_profitnloss") %></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px">Sales by a user</img></a>
+							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_sales_user") %></img></a>
 						</li>
 					</ul>
 					</li>                    
