--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -1,59 +1,62 @@
 <div id="leftmenu_main">    
                 
-                <h3>Menu</h3>
+                <!-- <h3>Menu</h3> -->
                         
                 <ul>
-                    <li><a href="login"><%=Messages.getString("company_dashboard") %></a></li>
-                    <li><a href="#"><%=Messages.getString("company_user_Profile") %></a></li>
+                    <li><a href="login"><b><%=Messages.getString("company_dashboard") %></b></a></li>
+                    <!-- <li><a href="#"><b><%=Messages.getString("company_user_Profile") %></b></a></li> -->
                     <li><a href="#"><%=Messages.getString("company_product") %></a>
 					<ul>
 						<li>
-							<a href="SaveStockAlart"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_item_configuration") %></img></a>
+							<a href="SaveStockAlart"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_item_configuration") %></font></img></a>
 						</li>
 						<li>
-							<a href="saveProduct"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_master_entry") %></img></a>
+							<a href="saveProduct"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_master_entry") %></font></img></a>
 						</li>
 						<li>
-							<a href="saveStock"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_purchase_entry") %></img></a>
+							<a href="saveStock"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_purchase_entry") %></font></img></a>
 						</li>
-						<li>
-							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_purchase_edit") %></img></a>
-						</li>
+						<!-- <li>
+							<a href="#"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_purchase_edit") %></font></img></a>
+						</li> -->
+						
 					</ul>
 					</li>
-                    <li><a href="#"><%=Messages.getString("company_sales") %></a>
+                    <!-- <li><b><a href="#"><%=Messages.getString("company_sales") %></b></a>
 					<ul>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_customer_entry") %></img></a>
+							<a href="#"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_customer_entry") %></font></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_product_sales") %></img></a>
+							<a href="#"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_product_sales") %></font></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_edit_sales") %></img></a>
+							<a href="#"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_edit_sales") %></font></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_pending_payment") %></img></a>
+							<a href="#"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_pending_payment") %></font></img></a>
 						</li>
+						
 					</ul>
-					</li>
-                    <li><a href="#"><%=Messages.getString("company_report") %></a>
+					</li> -->
+                    <li><b><a href="#"><%=Messages.getString("company_report") %></b></a>
 					<ul>
 						<li>
-							<a href="ViewStock"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_stock_view") %></img></a>
+							<a href="ViewStock"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_stock_view") %></font></img></a>
 						</li>
 						<li>
-							<a href="ViewPurchase"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_purchase_view") %></img></a>
+							<a href="ViewPurchase"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_purchase_view") %></font></img></a>
+						</li>
+						<!-- <li>
+							<a href="#"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_sales_view") %></font></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_sales_view") %></img></a>
+							<a href="#"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_profitnloss") %></font></img></a>
 						</li>
 						<li>
-							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_profitnloss") %></img></a>
-						</li>
-						<li>
-							<a href="#"><img src="images/arrow.png" height="20px"><%=Messages.getString("company_sales_user") %></img></a>
-						</li>
+							<a href="#"><img src="images/arrow.png" height="10px"><font color="#0000FF"><%=Messages.getString("company_sales_user") %></font></img></a>
+						</li> -->
+						
 					</ul>
 					</li>                    
                 </ul>
