--- a/WebContent/css/include-style.css
+++ b/WebContent/css/include-style.css
@@ -50,7 +50,7 @@ background: -webkit-linear-gradient(top,  #c4ebfa 0%,#63daf7 50%,#caeefa 100%); 
 background: -o-linear-gradient(top,  #c4ebfa 0%,#63daf7 50%,#caeefa 100%); /* Opera 11.10+ */
 background: -ms-linear-gradient(top,  #c4ebfa 0%,#63daf7 50%,#caeefa 100%); /* IE10+ */
 /* background: linear-gradient(to bottom,  #c4ebfa 0%,#63daf7 50%,#caeefa 100%); */ /* W3C */
-background: linear-gradient(to bottom,  #c4ebfa 0%,black 50%,black 100%); 
+background: linear-gradient(to bottom,  #c4ebfa 0%,black 50%,brown 100%); 
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c4ebfa', endColorstr='#caeefa',GradientType=0 ); /* IE6-9 */
 
 }
@@ -343,7 +343,7 @@ p {text-align: left;}
 
 .inpu-div{
 	float: left;
-	width: 45%;
+	width: 100%;
 	padding-top: 10px;
 }
 
@@ -356,7 +356,7 @@ p {text-align: left;}
 	font-family: Raleway,sans-serif;
 }
 .input-text{
-	width: 55%;
+	width: 90%;
 }
 .rcorners {
     border-radius: 5px;
@@ -367,7 +367,7 @@ p {text-align: left;}
     margin-bottom: 20px; height: 220px; border-color:#cccccc;
 }
 .heading {
-	background: #c4ebfa; 
+	background: linear-gradient(to bottom,  #c4ebfa 0%,#63daf7 50%,#caeefa 100%); 
 	border: 2px solid #cccccc; 
 	align:center; 
 	width:99.6%; 
