--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -20,13 +20,13 @@
 						</li> -->
 			</ul></li>
 
-		<li class='active has-sub'><a href="#"><%=Messages.getString("company_sales") %></a>
+		<!-- li class='active has-sub'><a href="#"><%=Messages.getString("company_sales") %></a>
 					<ul>
 						<li>
 							<a href="#"><%=Messages.getString("company_customer_entry") %></a>
 						</li>
 						<li>
-							<a href="SalesProduct"><%=Messages.getString("company_product_sales") %></a>
+							<a href="#"><%=Messages.getString("company_product_sales") %></a>
 						</li>
 						<li>
 							<a href="#"><%=Messages.getString("company_edit_sales") %></a>
@@ -36,7 +36,7 @@
 						</li>
 						
 					</ul>
-					</li>
+					</li-->
 		<li class='active has-sub'><a href="#"><%=Messages.getString("company_report")
 				%></a>
 			<ul>
@@ -44,7 +44,7 @@
 				</li>
 				<li><a href="ViewPurchase"><%=Messages.getString("company_purchase_view")
 						%></a></li>
-				<li>
+				<!-- <li>
 							<a href="#"><%=Messages.getString("company_sales_view") %></a>
 						</li>
 						<li>
@@ -52,7 +52,7 @@
 						</li>
 						<li>
 							<a href="#"><%=Messages.getString("company_sales_user") %></a>
-						</li>
+						</li> -->
 
 			</ul></li>
 	</ul>
