--- a/WebContent/pages/include/sidemenu.htm
+++ b/WebContent/pages/include/sidemenu.htm
@@ -10,51 +10,44 @@
 		<li class='active has-sub'><a href='#' id="companyproduct"><%=Messages.getString("company_product")
 				%></a>
 			<ul>
-				<li><a href="SaveStockAlart" id="itemconfig"><%=Messages.getString("company_item_configuration")
-						%></a></li>
 				<li><a href="saveProduct" id="masterproduct"><%=Messages.getString("company_master_entry")
 						%></a></li>
 				<li id="selectpage"><a href="saveStock" id="purchaseentry"><%=Messages.getString("company_purchase_entry")
+						%></a></li>
+				<li><a href="SaveStockAlart" id="itemconfig"><%=Messages.getString("company_item_configuration")
 						%></a></li>
 				<!-- <li>
 							<a href="#"><%=Messages.getString("company_purchase_edit") %></a>
 						</li> -->
 			</ul></li>
-			
 
-		<li class='active has-sub'><a href="#" id="companysales"><%=Messages.getString("company_sales") %></a>
-					<ul>
-						<li>
-							<a href="#" id="customerentry"><%=Messages.getString("company_customer_entry") %></a>
-						</li>
-						<li>
-							<a href="SalesProduct" id="productsales"><%=Messages.getString("company_product_sales") %></a>
-						</li>
-						<li>
-							<a href="#" id="editsales"><%=Messages.getString("company_edit_sales") %></a>
-						</li>
-						<li>
-							<a href="#" id="pendingpayment"><%=Messages.getString("company_pending_payment") %></a>
-						</li>
-						
-					</ul>
-					</li>
+
+		<li class='active has-sub'><a href="#" id="companysales"><%=Messages.getString("company_sales")
+				%></a>
+			<ul>
+				<li><a href="#" id="customerentry"><%=Messages.getString("company_customer_entry")
+						%></a></li>
+				<li><a href="SalesProduct" id="productsales"><%=Messages.getString("company_product_sales")
+						%></a></li>
+				<li><a href="#" id="editsales"><%=Messages.getString("company_edit_sales")
+						%></a></li>
+				<li><a href="#" id="pendingpayment"><%=Messages.getString("company_pending_payment")
+						%></a></li>
+
+			</ul></li>
 		<li class='active has-sub'><a href="#" id="companyreport"><%=Messages.getString("company_report")
 				%></a>
 			<ul>
-				<li><a href="ViewStock" id="stockview"><%=Messages.getString("company_stock_view") %></a>
-				</li>
+				<li><a href="ViewStock" id="stockview"><%=Messages.getString("company_stock_view")
+						%></a></li>
 				<li><a href="ViewPurchase" id="purchaseview"><%=Messages.getString("company_purchase_view")
 						%></a></li>
-				<li>
-							<a href="#" id="salesview"><%=Messages.getString("company_sales_view") %></a>
-						</li>
-						<li>
-							<a href="#" id="profitnloss"><%=Messages.getString("company_profitnloss") %></a>
-						</li>
-						<li>
-							<a href="#" id="salesuser"><%=Messages.getString("company_sales_user") %></a>
-						</li>
+				<li><a href="#" id="salesview"><%=Messages.getString("company_sales_view")
+						%></a></li>
+				<li><a href="#" id="profitnloss"><%=Messages.getString("company_profitnloss")
+						%></a></li>
+				<li><a href="#" id="salesuser"><%=Messages.getString("company_sales_user")
+						%></a></li>
 
 			</ul></li>
 	</ul>
